cabal-version:      2.4
name:               ash
version:            0.1.0
synopsis:           A Scheme interpreter
description:        An interpreter for a subset of R5RS Scheme
category:           Compilers/Interpreters
license:            MIT
license-file:       LICENSE
author:             Soumik Sarkar
maintainer:         meooow.dev@gmail.com

extra-source-files: README.md
data-files:         lib-scm/lib.scm

source-repository head
  type:     git
  location: git://github.com/meooow25/ash.git

library
  ghc-options:      -Wall
  exposed-modules:
      AstParse
    , Conv
    , Eval
    , Parse
    , Procedures
    , Run
    , SValOverloads
    , Types
    , Util
  other-modules:    Paths_ash
  autogen-modules:  Paths_ash
  build-depends:
      base                 >= 4.13    && < 5.0
    , exceptions           >= 0.10.5  && < 0.11
    , hashable             >= 1.4     && < 1.5
    , megaparsec           >= 9.2.1   && < 9.3
    , mtl                  >= 2.2.2   && < 2.3
    , text                 >= 2.0     && < 2.1
    , transformers         >= 0.5.6   && < 0.6
    , unordered-containers >= 0.2.19  && < 0.3
    , vector               >= 0.12.3  && < 0.13
  hs-source-dirs:   src
  default-language: Haskell2010

executable ash
  ghc-options:     -Wall
  main-is:         Main.hs
  other-modules:   Paths_ash
  autogen-modules: Paths_ash
  build-depends:
      haskeline  >= 0.8.2  && < 0.9
    , base
    , exceptions
    , text
    , transformers
    , ash
  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite test-ash
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
      AstParseTests
    , EvalTests
    , ParseTests
    , TestUtil
  build-depends:
      HUnit  >= 1.6.2  && < 1.7
    , base
    , exceptions
    , text
    , ash
  hs-source-dirs:   tests
  default-language: Haskell2010
